--- a/MVVMC Example/App/UI/Recipe/Base.lproj/Recipe.storyboard
+++ b/MVVMC Example/App/UI/Recipe/Base.lproj/Recipe.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,7 +11,7 @@
         <!--Recipe List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="RecipeListViewController" id="BYZ-38-t0r" customClass="RecipeListViewController" customModule="Task2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RecipeListViewController" id="BYZ-38-t0r" customClass="RecipeListViewController" customModule="MVVMC_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -38,6 +37,55 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="61.607142857142854"/>
+        </scene>
+        <!--Recipe Details View Controller-->
+        <scene sceneID="mOF-La-aC2">
+            <objects>
+                <viewController id="YaX-es-oeB" customClass="RecipeDetailsViewController" customModule="MVVMC_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Jnt-we-OPW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y9c-WV-e6A">
+                                <rect key="frame" x="0.0" y="44" width="414" height="269"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aAc-kp-bir">
+                                <rect key="frame" x="20" y="333" width="374" height="30"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Headline" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8qI-MZ-hEK">
+                                <rect key="frame" x="20" y="383" width="374" height="23"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="kDZ-k2-fxX"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="8qI-MZ-hEK" firstAttribute="top" secondItem="aAc-kp-bir" secondAttribute="bottom" constant="20" id="Bl7-cY-uPQ"/>
+                            <constraint firstItem="y9c-WV-e6A" firstAttribute="top" secondItem="kDZ-k2-fxX" secondAttribute="top" id="CGu-dz-TZ9"/>
+                            <constraint firstItem="8qI-MZ-hEK" firstAttribute="leading" secondItem="kDZ-k2-fxX" secondAttribute="leading" constant="20" id="HRn-od-sPX"/>
+                            <constraint firstItem="kDZ-k2-fxX" firstAttribute="trailing" secondItem="y9c-WV-e6A" secondAttribute="trailing" id="SVI-Zs-yIG"/>
+                            <constraint firstItem="aAc-kp-bir" firstAttribute="top" secondItem="y9c-WV-e6A" secondAttribute="bottom" constant="20" id="UPZ-bf-ikq"/>
+                            <constraint firstItem="kDZ-k2-fxX" firstAttribute="trailing" secondItem="8qI-MZ-hEK" secondAttribute="trailing" constant="20" id="VqJ-8W-LdT"/>
+                            <constraint firstItem="aAc-kp-bir" firstAttribute="leading" secondItem="kDZ-k2-fxX" secondAttribute="leading" constant="20" id="ao2-6q-dER"/>
+                            <constraint firstItem="kDZ-k2-fxX" firstAttribute="trailing" secondItem="aAc-kp-bir" secondAttribute="trailing" constant="20" id="gSU-M8-i4s"/>
+                            <constraint firstItem="y9c-WV-e6A" firstAttribute="height" secondItem="Jnt-we-OPW" secondAttribute="height" multiplier="0.3" id="kFM-Se-Ucu"/>
+                            <constraint firstItem="y9c-WV-e6A" firstAttribute="leading" secondItem="kDZ-k2-fxX" secondAttribute="leading" id="nfg-Qv-K2U"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="recipeHeadline" destination="8qI-MZ-hEK" id="gta-qa-cB4"/>
+                        <outlet property="recipeImage" destination="y9c-WV-e6A" id="x3y-q8-OHv"/>
+                        <outlet property="recipeTitle" destination="aAc-kp-bir" id="jST-oE-Ai0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HwY-8e-jUs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="932" y="62"/>
         </scene>
     </scenes>
     <resources>
